<resources>
    <string name="app_name">Homework3lesson</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_login">Fragment login</string>
    <string name="username_fragment">Username fragment</string>
    <string name="fragment_User">User input:</string>
    <string name="LoginFragment">Fragment 1</string>
    <string name="UsernameFragment">Fragment 2</string>
    <string name="Hint_name">Name</string>
    <string name="Email">Email</string>
    <string name="Password_Name">password_name</string>
    <string name="btn">btn</string>
    <string name="enter_password">enter_Password</string>
    <string name="password">Password</string>
    <string name="e_mail">e-mail</string>
    <string name="name">Name</string>
    <string name="username">UserName</string>
    <string name="avatar">avatar</string>
    <string name="maintext">MainText</string>
    <string name="textname">textName</string>
    <string name="textpassword">textPassword</string>
    <string name="ButtonApply">Apply</string>
    <string name="preview">Preview</string>
</resources>